# codd-extras

./: README.md  cabal.project  codd-extras.cabal  flake.nix
.seihou/: manifest.json
agents/skills/exec-plan/: SKILL.md
agents/skills/release/: SKILL.md
docs/: design.md
ephemeral/Codd/Extras/: TestSupport.hs  WriteSchema.hs
nix/: haskell.nix
src/Codd/Extras/: Apply.hs  Cli.hs  Embedded.hs  ExpectedSchema.hs  Guards.hs  Ledger.hs  Lock.hs  LockFile.hs  MigrationSet.hs  New.hs  Settings.hs  Verify.hs
test/: Main.hs
